[package]
name = "rlox-interpreted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
rstest = "0.18"
anyhow = "1"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0.56"
lazy_static = "1.4.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Make the all group denied
all = { level = "deny", priority = -1 }

# Ignored some pedantic warnings
must_use_candidate = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }

enum_glob_use = "deny"
nursery = "deny"
correctness = "deny"
complexity = "deny"
pedantic = "deny"
perf = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = 'symbols'
