[package]
name = "rlox-interpreted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = { version = "2.0.11" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Make the all group denied
all = { level = "deny", priority = -1 }

# Ignored some pedantic warnings
must_use_candidate = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }

enum_glob_use = "deny"
nursery = "deny"
correctness = "deny"
complexity = "deny"
pedantic = "deny"
perf = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = 'symbols'
